 - You can now mark and copy timestamps if you hold down SHIFT.
 - Timestamps are now preserved in the /lastlog command. Also fixed a
   bug where the separator line disappeared during /lastlog.
 - Added a Browse button to the DCC download folder setting.
 - Made the setup window a little neater and Gnome-like.
 - Improved the notify window a little and fixed a small memory leak.
 - 
 - Perl:
  * Turn on utf8 flag for things that should have it on.


----------------------------------------------------------------------
 2.6.2 - 27/Mar/2006
----------------------------------------------------------------------

 - Updated translations (de, fr, ja, sv).
 - Made "/server freenode" send auto-join channels but not
   "/server irc://freenode".
 - Fixed building of xchat-text (although not recommended!).
 - Fixed using Strip mIRC colors & Color nicks at the same time.
 - Fixed a bug in timestamp drawing using non-fixed-width font [1404341].
 - Fixed display of realname in the nick-name right-click menu when it
   contains a '<' or '&' character [1403069].
 - Added support for UniBG's nickserv (ongeboren).
 - The move-to-complete-dir routine now treats encoding/UTF8 correctly.
 - Show help when using wrong args for /DCC, instead of silence.
 - Support receiving 2048 bytes per line from server and dcc-chat, so we
   can support 512 UTF-8 characters that some servers now send.
 - Added /gui detach and /gui attach commands for scripters.
 - The server list window now remembers its size.
 - TCL: Added 'selected' flag to users list.
 - Perl:
  * Fixed strip_code so that it no longer takes off extra commas (LifeIsPain)
  * Fixed filename checks so that '/load "filenameWithoutSpaces.pl"'
    will also work (Lian Wan Situ).
  * Fixed hook_fd to work with sockets on Windows (Vince Pit).


----------------------------------------------------------------------
 2.6.1 - 06/Jan/2006
----------------------------------------------------------------------
